Initial helpers (characterFactory, characterMovement), scene switcher, and initiliazers created

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <canvas class="webgl"> </canvas>
+    <div class="content_container">
 
-    <section class="section">
-        <h1> Sierra Vista Web Design </h1>
-    </section>
+        <button class="button"> Change scene </button> 
+        <div class="header_container">
+            <h1 class="title"> Test </h1> 
+        </div>
 
-    <section class="section">
-        <h2> Our Projects </h1>
-    </section>
+        
+    </div>
+    
 
-    <section class="section">
-        <h1> Contact Us </h1>
-    </section>
 </body>
 </html>
